--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <svg></svg>
+  <script src="script.js">
+  </script>
+  </body>
+</html>
